[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cagoule"
version = "1.1.0"
description = "Cryptographie Algébrique Géométrique par Ondes et Logique Entrelacée — système de chiffrement symétrique hybride"
readme = "README.md"
license = { text = "Proprietary - Confidential" }
authors = [{ name = "CAGOULE Team" }]
requires-python = ">=3.11"

dependencies = [
    "cryptography>=42.0",
    "mpmath>=1.3",
    "argon2-cffi>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
cagoule = "cagoule.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cagoule*"]

[tool.setuptools.package-data]
cagoule = ["kat_vectors.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["cagoule"]
omit = ["tests/*"]