[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cagoule"
version = "1.2.0"
description = "Cryptographie Algébrique Géométrique par Ondes et Logique Entrelacée"
authors = [
    {name = "Slim Issa", email = "slim.issa@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["cryptography", "encryption", "aead", "cipher", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=42.0.0",
    "mpmath>=1.3.0",
    "argon2-cffi>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/slimissa/CAGOULE"
Repository = "https://github.com/slimissa/CAGOULE"
Documentation = "https://github.com/slimissa/CAGOULE/blob/main/README.md"
Issues = "https://github.com/slimissa/CAGOULE/issues"

[project.scripts]
cagoule = "cagoule.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cagoule*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
source = ["cagoule"]
omit = ["tests/*", "cagoule/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C", "N", "D"]
ignore = ["D100", "D104", "D203"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
